--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000/",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,9 +23,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "set BUILD_PATH=../backend/public&& react-scripts build",
+    "build-docker": "BUILD_PATH=../backend/public react-scripts build"
   },
   "eslintConfig": {
     "extends": [
