--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix backend",
     "client": "npm start --prefix frontend",
-    "watch": "npm run server & npm run client",
+    "watch": "concurrently \"npm run server\" \"npm run client\"",
     "deploy": "npm run build --prefix frontend && npm start --prefix backend"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^7.4.0"
+  }
 }
