--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
     "start": "node server.js",
     "watch": "nodemon server.js",
     "client": "npm start --prefix frontend",
-    "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:import": "node seeder",
+    "data:destroy": "node seeder -d"
   },
   "repository": {
     "type": "git",
